--- a/vcluster/my-vcluster-app.yaml
+++ b/vcluster/my-vcluster-app.yaml
@@ -1,24 +1,41 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-vcluster
+  name: demo-vcluster
   namespace: argocd
 spec:
   project: default
   source:
+    path: ''
     chart: vcluster
-    repoURL: https://charts.loft.sh
+    repoURL: 'https://charts.loft.sh'
     targetRevision: 0.20.0-beta.9
     helm:
-      releaseName: my-vcluster
-      valueFiles:
-        - vcluster.yaml
+      releaseName: demo-vcluster
+      values: |
+        controlPlane:
+          ingress:
+            enabled: true
+            host: demo.vcluster.local
+            spec:
+              ingressClassName: nginx
+          proxy:
+            extraSANs:
+            - demo.vcluster.local
+        sync:
+          fromHost:
+            ingressClasses:
+              enabled: true
+          toHost:
+            ingresses:
+              enabled: true
   destination:
-    server: https://kubernetes.default.svc
-    namespace: team-x
+    name: ''
+    server: 'https://kubernetes.default.svc'
+    namespace: demo-vcluster
   syncPolicy:
     syncOptions:
-    - CreateNamspace=true
+      - CreateNamspace=true
     automated:
       selfHeal: true
       prune: true
