--- a/vcluster/my-vcluster-app.yaml
+++ b/vcluster/my-vcluster-app.yaml
@@ -4,12 +4,15 @@ metadata:
   name: demo-vcluster
   namespace: argocd
 spec:
-  project: default
+  destination:
+    name: ''
+    server: 'https://kubernetes.default.svc'
+    namespace: demo-vcluster  
   source:
-    path: ''
-    chart: vcluster
+    path: ''    
     repoURL: 'https://charts.loft.sh'
     targetRevision: 0.20.0-beta.9
+    chart: vcluster
     helm:
       releaseName: demo-vcluster
       values: |
@@ -29,13 +32,8 @@ spec:
           toHost:
             ingresses:
               enabled: true
-  destination:
-    name: ''
-    server: 'https://kubernetes.default.svc'
-    namespace: demo-vcluster
+  sources: []
   syncPolicy:
     syncOptions:
       - CreateNamspace=true
-    automated:
-      selfHeal: true
-      prune: true
+  project: default
