--- a/vcluster/my-vcluster-app.yaml
+++ b/vcluster/my-vcluster-app.yaml
@@ -35,5 +35,5 @@ spec:
   sources: []
   syncPolicy:
     syncOptions:
-      - CreateNamspace=true
+      - CreateNamespace=true
   project: default
