--- a/vcluster/my-vcluster-app.yaml
+++ b/vcluster/my-vcluster-app.yaml
@@ -1,30 +1,30 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-vcluster
+  name: argocd
   namespace: argocd
 spec:
   destination:
     name: ''
+    namespace: argocd
     server: 'https://kubernetes.default.svc'
-    namespace: demo-vcluster  
   source:
-    path: ''    
+    path: ''
     repoURL: 'https://charts.loft.sh'
-    targetRevision: 0.20.0-beta.9
+    targetRevision: 0.21.0-beta.6
     chart: vcluster
     helm:
-      releaseName: demo-vcluster
+      releaseName: argocd
       values: |
         controlPlane:
           ingress:
             enabled: true
-            host: demo.vcluster.local
+            host: demo.argocd.local
             spec:
               ingressClassName: nginx
           proxy:
             extraSANs:
-            - demo.vcluster.local
+            - demo.argocd.local
         sync:
           fromHost:
             ingressClasses:
