--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k3s-cluster
+  name: deploy-vcluster
   namespace: argocd
 spec:
   project: default
