--- a/vcluster/my-vcluster-app.yaml
+++ b/vcluster/my-vcluster-app.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     path: ''
     repoURL: 'https://charts.loft.sh'
-    targetRevision: 0.21.0-beta.6
+    targetRevision: 0.20.3
     chart: vcluster
     helm:
       releaseName: argocd
